@startuml

class Person {
    #String name
    #uint8_t age

    operator<<():void
}

class Course {
    -String code
    -String title
    -double grade
    -uint8_t credit_hour

    +Course(string code, string title, double grade, uint8_t credit_hour)
    +Course()
    +setAll(String code, String title,
        double grade, uint8_t credit_hour):void
}
class SingleLinkedList{
    #*head

    +getData(T data):T
    +add(T data):void
    +delete(T data):void
}
class DoubleLinkedList{
    -*tail

    +getData(T data):T
    +add(T data):void
    +remove(T data):void
    +getData(T data):T
}
class SingleNode{
    -T data
    -SingleNode *next

    +getData():T
    +setData():T
    +*getNext(SingleNode *next)
    +*setNext(SingleNode *next)
    +getNextasString():std::string
}
class DoubleNode{
    -DoubleNode *previous
    -DoubleNode *next
    -T data

    +getNext(DoubleNode *next)
    +setNext(DoubleNode *next)
    +getPrevious(DoubleNode *previous)
    +setPrevious(DoubleNode *previous)
    +getNextasString():std::string
    +getPreviousasString():std::string
}
class RecordManager{
    -String STUDENT_CSV_PATH
    -String COURSES_CSV_PATH
    -DoubleLinkedList<Student> students
    -DoubleLinkedList<Course> courses
    -Records records

    -isCSV(String PATH):bool
    -load():void
    -loadStudent():void
    -loadCourses():void
    -initializeRecords():void

    +displayMenu():void
    -takeMenuInput():void

    -addCourse():void
    -addStudent():void
    -deleteStudent():void
    -deleteCourse():void
}
class Student{
    -uint32_t total_credit_hours
    -uint32_t number_of_courses
    -uint32t uid
    -double gpa
    -SingleLinkedList<Course> courses

    +Student()
    +Student(uint32_t total_credit_hours, uint32_t number_of_courses, uint32_t uid, double gpa)
    +addCourse(Course course):void
    +deleteCourse(Course course):void
}
class Records{
    -uint32_t number_of_students
    -double average_GPA
    -DoubleLinkedList<Student> students

    +Records()
    +Records(uint32_t number_of_students, double average_GPA)
    +addStudent(double student_average_GPA):void
    +removeStudent(double student_average_GPA):void
    -updateAverage_gpa(double student_average_GPA):void
}
Person --|> Student : Inherits
Student o-- SingleLinkedList
Records o-- DoubleLinkedList
Student o-- Course
Records o-- Student
RecordManager o-- DoubleLinkedList
RecordManager o-- Records
RecordManager o-- Student
RecordManager o-- Course
SingleLinkedList o-- SingleNode
DoubleLinkedList o-- DoubleNode

SingleLinkedList --|> DoubleLinkedList : Inherits
SingleNode --|> DoubleNode : ???

note "every variable in program\nhas a public setter and getter" as N2
note bottom of N2 : "every class has << as an overloaded print operator\n for its contents" as N1
note top of RecordManager : "CSVs share uid's that link the data"
@enduml


